--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,3 @@
 {
-  "cleanUrls": true,
-  "rewrites": [
-    { "source": "/", "destination": "/charts/index.html" },
-    { "source": "/(.*)", "destination": "/charts/$1" }
-  ]
+  "cleanUrls": true
 }
