fix: 添加 /mobile/ 路径重定向

--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,12 @@
   "buildCommand": "",
   "outputDirectory": ".",
   "installCommand": "",
-  "framework": null
+  "framework": null,
+  "redirects": [
+    {
+      "source": "/mobile/:path*",
+      "destination": "/:path*",
+      "permanent": true
+    }
+  ]
 }
