fix: 添加 rewrites 规则修复 html 文件访问

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,20 @@
   "outputDirectory": ".",
   "installCommand": "",
   "framework": null,
+  "rewrites": [
+    {
+      "source": "/mobile",
+      "destination": "/mobile.html"
+    },
+    {
+      "source": "/mobile-spec",
+      "destination": "/mobile-spec.html"
+    },
+    {
+      "source": "/data-agent",
+      "destination": "/data-agent.html"
+    }
+  ],
   "redirects": [
     {
       "source": "/mobile/mobile-spec",
