添加KPI卡片设计展示页面，包含带子指标的KPI卡片场景例子（达成率及其子指标：销售额和销售目标）

--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,10 @@
     {
       "source": "/data-agent",
       "destination": "/data-agent.html"
+    },
+    {
+      "source": "/kpi-showcase",
+      "destination": "/kpi-showcase.html"
     }
   ],
   "redirects": [
